add few sections

--- a/src/includes/landing/landing.pug
+++ b/src/includes/landing/landing.pug
@@ -1,1 +1,16 @@
-.landing landing section kekpek
+.landing
+  .container
+    .landing__wrapper
+      .landing__logo
+      .landing__name Jincor
+      .landing__description
+        | Ваше рабочее общение в одном месте.
+        br
+        | Орагнизуйте процессы общения внутри компании
+        br
+        | и устанавливайте новые бизнес-контакты
+      .landing__try-button
+        button(type='button').button.button--primary Попробовать бесплатно
+      .landing__sign-in-button
+        button(type='button').button.button--link Войти
+      .landing__scroll-arrow
