--- a/src/index.pug
+++ b/src/index.pug
@@ -1,7 +1,13 @@
 head
-  title test
+  title Jincor
+  meta(name='viewport' content='width=device-width, initial-scale=1')
+
+  link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:300,500&amp;subset=cyrillic')
+  link(rel='stylesheet' href='./styles.css')
 
 body
   include ./includes/landing/landing
-
-  div another text eeee
+  include ./includes/start/start
+  include ./includes/step-section/step-section1
+  include ./includes/step-section/step-section2
+  include ./includes/step-section/step-section3
