--- a/src/includes/landing/landing.css
+++ b/src/includes/landing/landing.css
@@ -1,3 +1,72 @@
 .landing {
-  color: rebeccapurple;
+  width: 100%;
+  height: 100vh;
+  min-height: 640px;
+  background-color: #fcfcfc;
+  position: relative;
+
+  &__wrapper {
+    width: 980px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+
+    @media (max-width: 980px) {
+      width: 100%;
+    }
+  }
+
+  &__logo {
+    background-image: svg-load('../../svg/logo.svg');
+    background-size: contain;
+    size: 150px;
+    margin: 0 auto;
+
+    @media (max-width: 420px) {
+      size: 80px;
+    }
+  }
+
+  &__name {
+    font-size: 96px;
+    color: #222;
+    text-align: center;
+    font-weight: 500;
+    margin-bottom: 20px;
+
+    @media (max-width: 420px) {
+      font-size: 64px;
+    }
+  }
+
+  &__description {
+    font-size: 28px;
+    color: #222;
+    line-height: 44px;
+    text-align: center;
+
+    @media (max-width: 720px) {
+      font-size: 24px;
+    }
+
+    @media (max-width: 420px) {
+      font-size: 18px;
+      line-height: 30px;
+      padding: 0 20px;
+
+      & > br {
+        display: none;
+      }
+    }
+  }
+
+  &__try-button {
+    margin-top: 50px;
+    text-align: center;
+  }
+
+  &__sign-in-button {
+    margin-top: 40px;
+    text-align: center;
+  }
 }
