--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
+@import './includes/global/normalize.css';
+@import './includes/global/reset.css';
+
+
+@import './includes/common/container.css';
+@import './includes/common/buttons.css';
+@import './includes/common/screenshot.css';
 @import './includes/landing/landing.css';
+@import './includes/start/start.css';
+@import './includes/step-section/step-section.css';
+
+body {
+  font-family: 'Roboto';
+  font-weight: 300;
+  color: #333;
+}
