--- a/src/index.pug
+++ b/src/index.pug
@@ -11,3 +11,4 @@ body
   include ./includes/step-section/step-section1
   include ./includes/step-section/step-section2
   include ./includes/step-section/step-section3
+  include ./includes/footer/footer
