--- a/src/includes/step-section/step-section3.pug
+++ b/src/includes/step-section/step-section3.pug
@@ -5,5 +5,9 @@
     .step-section__title Пригласите своих сотрудников, чтобы начать общение
     .screenshot
       .screenshot__header
+        .screenshot__control
+          .screenshot__circle
+          .screenshot__circle
+          .screenshot__circle
       .screenshot__image
-    .step-section__text Больше, чем мессенджер. Jincor - это решение для тех, кто хочет заниматься бизнесом просто и эффективно.
+        img(src='./messages.png' alt='Регистрация')
