--- a/src/index.pug
+++ b/src/index.pug
@@ -11,4 +11,7 @@ body
   include ./includes/step-section/step-section1
   include ./includes/step-section/step-section2
   include ./includes/step-section/step-section3
+  include ./includes/tabs/tabs
   include ./includes/footer/footer
+
+  script(type='text/javascript' src='./app.js')
