--- a/src/includes/common/screenshot.css
+++ b/src/includes/common/screenshot.css
@@ -1,8 +1,35 @@
 .screenshot {
-  height: 530px;
-  background-color: #626b74;
+  background-color: #fff;
   width: 890px;
   border-radius: 4px;
   box-shadow: 0 -10px 25px 0 rgba(0, 0, 0, 0.05);
   margin: 0 auto;
+
+  &__header {
+    height: 26px;
+    width: 100%;
+    background-color: #e6e8eb;
+    position: relative;
+    border-radius: 4px 4px 0 0;
+  }
+
+  &__control {
+    position: absolute;
+    top: 9px;
+    left: 8px;
+  }
+
+  &__circle {
+    display: inline-block;
+    size: 8px;
+    border-radius: 50%;
+    background-color: #fff;
+    margin: 0 4px;
+  }
+
+  &__image {
+    & img {
+      width: 100%;
+    }
+  }
 }
