--- a/src/includes/common/social-networks.css
+++ b/src/includes/common/social-networks.css
@@ -14,6 +14,13 @@
         background-position: 50%;
         border: 1px solid #ececec;
         border-radius: 50%;
+        opacity: .75;
+        transition: .1s linear all;
+
+        &:hover {
+            opacity: 1;
+            background-size: 50px;
+        }
 
         &--facebook {
             background-image: svg-load('../../svg/facebook.svg');
