--- a/src/includes/step-section/step-section1.pug
+++ b/src/includes/step-section/step-section1.pug
@@ -5,5 +5,10 @@
     .step-section__title Зарегистрируйте свою компанию в платформе Jincor
     .screenshot
       .screenshot__header
+        .screenshot__control
+          .screenshot__circle
+          .screenshot__circle
+          .screenshot__circle
       .screenshot__image
+        img(src='./messenger.png' alt='Регистрация')
     .step-section__text Больше, чем мессенджер. Jincor - это решение для тех, кто хочет заниматься бизнесом просто и эффективно.
