--- a/src/includes/step-section/step-section2.pug
+++ b/src/includes/step-section/step-section2.pug
@@ -5,5 +5,10 @@
     .step-section__title Пригласите своих сотрудников, чтобы начать общение
     .screenshot
       .screenshot__header
+        .screenshot__control
+          .screenshot__circle
+          .screenshot__circle
+          .screenshot__circle
       .screenshot__image
+        img(src='./emoji.png' alt='Регистрация')
     .step-section__text Больше, чем мессенджер. Jincor - это решение для тех, кто хочет заниматься бизнесом просто и эффективно.
