--- a/src/includes/step-section/step-section1.pug
+++ b/src/includes/step-section/step-section1.pug
@@ -3,7 +3,7 @@
   .container
     .step-section__number 1
     .step-section__title Зарегистрируйте свою компанию в платформе Jincor
-    .screenshot
+    .screenshot.js-screenshot-first
       .screenshot__header
         .screenshot__control
           .screenshot__circle
