--- a/src/includes/step-section/step-section2.pug
+++ b/src/includes/step-section/step-section2.pug
@@ -3,7 +3,7 @@
   .container
     .step-section__number 2
     .step-section__title Пригласите своих сотрудников, чтобы начать общение
-    .screenshot
+    .screenshot.js-screenshot-second
       .screenshot__header
         .screenshot__control
           .screenshot__circle
