--- a/src/includes/step-section/step-section3.pug
+++ b/src/includes/step-section/step-section3.pug
@@ -3,7 +3,7 @@
   .container
     .step-section__number 3
     .step-section__title Пригласите своих сотрудников, чтобы начать общение
-    .screenshot
+    .screenshot.js-slider.js-screenshot-third
       .screenshot__header
         .screenshot__control
           .screenshot__circle
@@ -11,3 +11,41 @@
           .screenshot__circle
       .screenshot__image
         img(src='./messages.png' alt='Регистрация')
+
+    .screenshot__dots
+      .screenshot__dot
+        .screenshot__dot-icon.screenshot__dot-icon--chat
+        .screenshot__dot-name
+          | Личная
+          br 
+          | переписка
+
+      .screenshot__dot
+        .screenshot__dot-icon.screenshot__dot-icon--group
+        .screenshot__dot-name
+          | Групповые
+          br
+          | чаты
+
+      .screenshot__dot
+        .screenshot__dot-icon.screenshot__dot-icon--search
+        .screenshot__dot-name
+          | Поиск
+          br
+          | компаний
+
+      .screenshot__dot
+        .screenshot__dot-icon.screenshot__dot-icon--inbox
+        .screenshot__dot-name
+          | Обращения
+          br
+          | в компанию
+
+      .screenshot__dot
+        .screenshot__dot-icon.screenshot__dot-icon--channel
+        .screenshot__dot-name
+            | Канал
+            br
+            | компании
+
+    .step-section__text Больше, чем мессенджер. Jincor - это решение для тех, кто хочет заниматься бизнесом просто и эффективно.
