--- a/src/includes/tabs/tabs.pug
+++ b/src/includes/tabs/tabs.pug
@@ -1,5 +1,5 @@
 .tabs
-    .tabs__buttons(data-tabs)
+    .tabs__buttons
         .tabs__toggle.tabs__toggle_active
             .tabs__icon.tabs__icon--chat
             .tabs__name
