--- a/src/index.pug
+++ b/src/index.pug
@@ -1,5 +1,6 @@
 head
   title Jincor
+  meta(charset='utf-8')
   meta(name='viewport' content='width=device-width, initial-scale=1')
 
   link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:300,500&amp;subset=cyrillic')
@@ -11,7 +12,6 @@ body
   include ./includes/step-section/step-section1
   include ./includes/step-section/step-section2
   include ./includes/step-section/step-section3
-  include ./includes/tabs/tabs
   include ./includes/footer/footer
 
   script(type='text/javascript' src='./app.js')
