--- a/src/includes/step-section/step-section1.pug
+++ b/src/includes/step-section/step-section1.pug
@@ -1,4 +1,4 @@
-.step-section.step-section--red
+.step-section
   .step-section__filled-background.step-section__filled-background--red
   .container
     .step-section__number 1
