--- a/src/includes/common/screenshot.css
+++ b/src/includes/common/screenshot.css
@@ -36,7 +36,7 @@
   &__dots {
     position: relative;
     text-align: center;
-    padding-bottom: 120px;
+    margin: 55px 0 60px;
   }
 
   &__dot {
