--- a/src/includes/step-section/step-section3.pug
+++ b/src/includes/step-section/step-section3.pug
@@ -4,32 +4,50 @@
     .step-section__number 3
     .step-section__title Пригласите своих сотрудников, чтобы начать общение
     .js-slider
-      .screenshot
+      .screenshot.js-slide.js-screenshot-third
         .screenshot__header
           .screenshot__control
             .screenshot__circle
             .screenshot__circle
             .screenshot__circle
         .screenshot__image
-          img(src='./messages.png' alt='Регистрация')
+          img(src='./messenger.png' alt='Личная переписка')
 
-      .screenshot
+      .screenshot.js-slide
         .screenshot__header
           .screenshot__control
             .screenshot__circle
             .screenshot__circle
             .screenshot__circle
         .screenshot__image
-          img(src='./messenger.png' alt='Регистрация')
+          img(src='./search-results.png' alt='Поиск компаний')
 
-      .screenshot
+      .screenshot.js-slide
         .screenshot__header
           .screenshot__control
             .screenshot__circle
             .screenshot__circle
             .screenshot__circle
         .screenshot__image
-          img(src='./emoji.png' alt='Регистрация')
+          img(src='./search-results.png' alt='Поиск компаний')
+
+      .screenshot.js-slide
+        .screenshot__header
+          .screenshot__control
+            .screenshot__circle
+            .screenshot__circle
+            .screenshot__circle
+        .screenshot__image
+          img(src='./company-profile.png' alt='Обращения в компанию')
+
+      .screenshot.js-slide
+        .screenshot__header
+          .screenshot__control
+            .screenshot__circle
+            .screenshot__circle
+            .screenshot__circle
+        .screenshot__image
+          img(src='./user-profile.png' alt='Канал компании')
 
     .screenshot__dots
       .screenshot__dot.js-dot
