--- a/src/includes/common/screenshot.css
+++ b/src/includes/common/screenshot.css
@@ -3,7 +3,12 @@
   width: 890px;
   border-radius: 4px;
   box-shadow: 0 -10px 25px 0 rgba(0, 0, 0, 0.05);
-  margin: 0 auto;
+  margin: 0 auto 10px;
+  transition: .7s cubic-bezier(0.6, 0.2, 0.1, 1) opacity;
+
+  &.active {
+    opacity: 1;
+  }
 
   &__header {
     height: 26px;
@@ -14,17 +19,19 @@
   }
 
   &__control {
-    position: absolute;
-    top: 9px;
-    left: 8px;
+    position: absolute 8px * * 5px;
   }
 
   &__circle {
     display: inline-block;
-    size: 8px;
+    size: 10px;
     border-radius: 50%;
     background-color: #fff;
     margin: 0 4px;
+
+    &:nth-child(1) { background-color: #dd7165 }
+    &:nth-child(2) { background-color: #eebf64 }
+    &:nth-child(3) { background-color: #7cc163 }
   }
 
   &__image {
@@ -37,6 +44,15 @@
     position: relative;
     text-align: center;
     margin: 55px 0 60px;
+
+    &:after {
+      content: '';
+      size: 800px 1px;
+      background-color: #f2f4f7;
+      position: absolute * * 0 50%;
+      margin-left: -400px;
+      z-index: -1;
+    }
   }
 
   &__dot {
@@ -46,6 +62,23 @@
     margin: 0 10px;
     user-select: none;
     cursor: pointer;
+
+    &.active {
+      cursor: default;
+      pointer-events: none;
+
+      .screenshot__dot-icon {
+        transform: scale(1.2);
+      }
+
+      &:after {
+        content: '';
+        size: 80px 1px;
+        background-color: #0070e0;
+        position: absolute * * 0 50%;
+        margin-left: -40px;
+      }
+    }
 
     &:hover {
       .screenshot__dot-icon {
