--- a/src/includes/footer/footer.pug
+++ b/src/includes/footer/footer.pug
@@ -9,18 +9,18 @@
       button(type='button').button.button--primary Попробовать бесплатно
     .footer__social-networks
       .social-networks
-        .social-networks__network
+        .social-networks__network.js-social-network1
           a.social-networks__circle.social-networks__circle--facebook(href="http://facebook.com" target="_blank")
           .social-networks__name Facebook
-        .social-networks__network
+        .social-networks__network.js-social-network2
           a.social-networks__circle.social-networks__circle--twitter(href="http://twitter.com" target="_blank")
           .social-networks__name Twitter
-        .social-networks__network
+        .social-networks__network.js-social-network3
           a.social-networks__circle.social-networks__circle--slack(href="http://slack.com" target="_blank") 
           .social-networks__name Slack
-        .social-networks__network
+        .social-networks__network.js-social-network4
           a.social-networks__circle.social-networks__circle--github(href="http://github.com" target="_blank")
           .social-networks__name Github
-        .social-networks__network
+        .social-networks__network.js-social-network5
           a.social-networks__circle.social-networks__circle--medium(href="http://medium.com" target="_blank")
           .social-networks__name Medium
