--- a/src/includes/landing/landing.pug
+++ b/src/includes/landing/landing.pug
@@ -3,7 +3,7 @@
     .landing__wrapper
       .js-landing-section
         .landing__logo
-        .landing__name Jincor
+        .landing__name
         .landing__description
           | Ваше рабочее общение в одном месте.
           br
