--- a/src/index.pug
+++ b/src/index.pug
@@ -1,7 +1,14 @@
 head
   title Jincor
   meta(charset='utf-8')
-  meta(name='viewport' content='width=device-width, initial-scale=1')
+  meta(name='viewport' content='width=1000px')
+
+  link(rel='apple-touch-icon' sizes='180x180' href='./favicons/apple-touch-icon.png')
+  link(rel='icon' type='image/png' sizes='32x32' href='./favicons/favicon-32x32.png')
+  link(rel='icon' type='image/png' sizes='16x16' href='./favicons/favicon-16x16.png')
+  link(rel='mask-icon' href='./faviocns/safari-pinned-tab.svg' color='#ffffff')
+  meta(name='msapplication-TileColor' content='#ffffff')
+  meta(name='theme-color' content='#fff')
 
   link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:300,500&amp;subset=cyrillic')
   link(rel='stylesheet' href='./styles.css')
