--- a/src/includes/footer/footer.pug
+++ b/src/includes/footer/footer.pug
@@ -6,7 +6,7 @@
       br
       | Бесплатный период - 3 месяца
     .footer__try-button
-      button(type='button').button.button--primary Попробовать бесплатно
+      a(href='http://stage.jincor.com/auth/signup').button.button--primary Попробовать бесплатно
     .footer__social-networks
       .social-networks
         .social-networks__network.js-social-network1
