--- a/src/includes/landing/landing.pug
+++ b/src/includes/landing/landing.pug
@@ -3,7 +3,7 @@
     .landing__wrapper
       .js-landing-section
         .landing__logo
-        .landing__name
+        .landing__name Jincor
         .landing__description
           | Ваше рабочее общение в одном месте.
           br
@@ -11,7 +11,7 @@
           br
           | и устанавливайте новые бизнес-контакты
         .landing__try-button
-          button(type='button').button.button--primary Попробовать бесплатно
+          a(href='http://stage.jincor.com/auth/signup').button.button--primary Попробовать бесплатно
         .landing__sign-in-button
-          button(type='button').button.button--link Войти
-      .landing__scroll-arrow
+          a(href='http://stage.jincor.com/auth/signin').button.button--link Войти
+  .landing__scroll-arrow
