--- a/src/includes/step-section/step-section3.pug
+++ b/src/includes/step-section/step-section3.pug
@@ -2,7 +2,7 @@
   .step-section__filled-background.step-section__filled-background--blue
   .container
     .step-section__number 3
-    .step-section__title Пригласите своих сотрудников, чтобы начать общение
+    .step-section__title Общайтесь со своими коллегами и другими компаниями
     .js-slider
       .screenshot.js-slide.js-screenshot-third
         .screenshot__header
@@ -11,7 +11,7 @@
             .screenshot__circle
             .screenshot__circle
         .screenshot__image
-          img(src='./messenger.png' alt='Личная переписка')
+          img(src='./3-dialogs.png' alt='Личная переписка')
 
       .screenshot.js-slide
         .screenshot__header
@@ -20,7 +20,7 @@
             .screenshot__circle
             .screenshot__circle
         .screenshot__image
-          img(src='./search-results.png' alt='Поиск компаний')
+          img(src='./4-group-chats.png' alt='Поиск компаний')
 
       .screenshot.js-slide
         .screenshot__header
@@ -29,7 +29,7 @@
             .screenshot__circle
             .screenshot__circle
         .screenshot__image
-          img(src='./search-results.png' alt='Поиск компаний')
+          img(src='./5-search.png' alt='Поиск компаний')
 
       .screenshot.js-slide
         .screenshot__header
@@ -38,7 +38,7 @@
             .screenshot__circle
             .screenshot__circle
         .screenshot__image
-          img(src='./company-profile.png' alt='Обращения в компанию')
+          img(src='./6-inquiries.png' alt='Обращения в компанию')
 
       .screenshot.js-slide
         .screenshot__header
@@ -47,7 +47,7 @@
             .screenshot__circle
             .screenshot__circle
         .screenshot__image
-          img(src='./user-profile.png' alt='Канал компании')
+          img(src='./3-dialogs.png' alt='Канал компании')
 
     .screenshot__dots
       .screenshot__dot.js-dot
