--- a/src/includes/step-section/step-section1.pug
+++ b/src/includes/step-section/step-section1.pug
@@ -10,5 +10,5 @@
           .screenshot__circle
           .screenshot__circle
       .screenshot__image
-        img(src='./messenger.png' alt='Регистрация')
+        img(src='./1-create-company.png' alt='Регистрация')
     .step-section__text Больше, чем мессенджер. Jincor - это решение для тех, кто хочет заниматься бизнесом просто и эффективно.
